--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -20,8 +20,11 @@ ja:
     attributes:
       user:
         current_password: "現在のパスワード"
-        name: 名前
+        name: "名前"
         email: "メールアドレス"
+        postal_code: "郵便番号"
+        address: "住所"
+        introduction: "自己紹介文"
         password: "パスワード"
         password_confirmation: "確認用パスワード"
         remember_me: "次回から自動的にログイン"
@@ -62,7 +65,7 @@ ja:
         cancel_my_account: "アカウント削除"
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
         leave_blank_if_you_don_t_want_to_change_it: "空欄のままなら変更しません"
-        title: "%{resource}編集"
+        title: "アカウントの編集"
         unhappy: "気に入りません"
         update: "更新"
         we_need_your_current_password_to_confirm_your_changes: "変更を反映するには現在のパスワードを入力してください"
