--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -24,15 +24,29 @@ ja:
         destroy: 削除
         back: 戻る
       flash:
-        create: 本を登録しました
-        update: 本を更新しました
-        destroy: 本を削除しました
+        create: 登録しました
+        update: 更新しました
+        destroy: 削除しました
       confirm:
         destroy: 削除してよろしいですか？
+    book:
       page_title:
-        books: 登録本一覧
+        index: 登録本一覧
         edit: 本の編集
         new: 新規作成
+        show: 本の詳細
+    relationship:
+      page_title:
+        follows: フォロー一覧
+        followers: フォロワー一覧
+      link:
+        follow: フォローする
+        followed: フォロー済
+        follows: フォロー一覧
+        followers: フォロワー一覧
+      flash:
+        follow: フォローしました
+        unfollow: フォローを解除しました
   date:
     abbr_day_names:
     - 日
