--- a/config/locales/kaminari.ja.yml
+++ b/config/locales/kaminari.ja.yml
@@ -5,9 +5,9 @@ ja:
         display_entries: "全<b>%{total}</b>件中<b>%{first} - %{last}</b>件を表示しています"
       one_page:
         display_entries:
-          one: "<b>%{count}</b>レコード表示中です %{entry_name}"
-          other: "<b>%{count}</b>レコード表示中です %{entry_name}"
-          zero: "レコードが見つかりませんでした %{entry_name}"
+          one: "<b>%{count}</b>レコード表示中です"
+          other: "<b>%{count}</b>レコード表示中です"
+          zero: "レコードが見つかりませんでした"
   views:
     pagination:
       first: "&laquo; 最初"
